--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -1,6 +1,6 @@
 {
   "account.badges.bot": "Bot",
-  "account.block": "@{name}さんをブロック",
+  "account.block": "@{name}さんを根絶やし",
   "account.block_domain": "{domain}全体を非表示",
   "account.blocked": "ブロック済み",
   "account.direct": "@{name}さんにダイレクトメッセージ",
@@ -14,25 +14,25 @@
   "account.follows": "フォロー",
   "account.follows.empty": "まだ誰もフォローしていません。",
   "account.follows_you": "フォローされています",
-  "account.hide_reblogs": "@{name}さんからのブーストを非表示",
+  "account.hide_reblogs": "@{name}さんからの破竹の勢いと称された成長を非表示",
   "account.link_verified_on": "このリンクの所有権は{date}に確認されました",
   "account.media": "メディア",
-  "account.mention": "@{name}さんにトゥート",
+  "account.mention": "@{name}さんに成長を見せつける",
   "account.moved_to": "{name}さんは引っ越しました:",
-  "account.mute": "@{name}さんをミュート",
+  "account.mute": "@{name}さんを除草",
   "account.mute_notifications": "@{name}さんからの通知を受け取らない",
-  "account.muted": "ミュート済み",
+  "account.muted": "除草済み",
   "account.posts": "投稿",
   "account.posts_with_replies": "投稿と返信",
   "account.report": "@{name}さんを通報",
   "account.requested": "フォロー承認待ちです。クリックしてキャンセル",
   "account.share": "@{name}さんのプロフィールを共有する",
-  "account.show_reblogs": "@{name}さんからのブーストを表示",
-  "account.unblock": "@{name}さんのブロックを解除",
+  "account.show_reblogs": "@{name}さんからの破竹の勢いと称した成長を表示",
+  "account.unblock": "@{name}さんの根絶やしを解除",
   "account.unblock_domain": "{domain}を表示",
   "account.unendorse": "プロフィールから外す",
   "account.unfollow": "フォロー解除",
-  "account.unmute": "@{name}さんのミュートを解除",
+  "account.unmute": "@{name}さんの除草を解除",
   "account.unmute_notifications": "@{name}さんからの通知を受け取るようにする",
   "account.view_full_profile": "全ての情報を見る",
   "alert.unexpected.message": "不明なエラーが発生しました。",
@@ -44,17 +44,17 @@
   "bundle_modal_error.close": "閉じる",
   "bundle_modal_error.message": "コンポーネントの読み込み中に問題が発生しました。",
   "bundle_modal_error.retry": "再試行",
-  "column.blocks": "ブロックしたユーザー",
+  "column.blocks": "根絶やしにしたユーザー",
   "column.community": "ローカルタイムライン",
   "column.direct": "ダイレクトメッセージ",
   "column.domain_blocks": "非表示にしたドメイン",
-  "column.favourites": "お気に入り",
+  "column.favourites": "肥料を与えた成長",
   "column.follow_requests": "フォローリクエスト",
   "column.home": "ホーム",
   "column.lists": "リスト",
-  "column.mutes": "ミュートしたユーザー",
+  "column.mutes": "除草したユーザー",
   "column.notifications": "通知",
-  "column.pins": "固定されたトゥート",
+  "column.pins": "固定した成長",
   "column.public": "連合タイムライン",
   "column_back_button.label": "戻る",
   "column_header.hide_settings": "設定を隠す",
@@ -65,13 +65,13 @@
   "column_header.unpin": "ピン留めを外す",
   "column_subheading.settings": "設定",
   "community.column_settings.media_only": "メディアのみ表示",
-  "compose_form.direct_message_warning": "このトゥートはメンションされた人にのみ送信されます。",
+  "compose_form.direct_message_warning": "この成長はメンションされた人にのみ送信されます。",
   "compose_form.direct_message_warning_learn_more": "もっと詳しく",
-  "compose_form.hashtag_warning": "このトゥートは未収載なのでハッシュタグの一覧に表示されません。公開トゥートだけがハッシュタグで検索できます。",
+  "compose_form.hashtag_warning": "この成長は未収載なのでハッシュタグの一覧に表示されません。公開成長だけがハッシュタグで検索できます。",
   "compose_form.lock_disclaimer": "あなたのアカウントは{locked}になっていません。誰でもあなたをフォローすることができ、フォロワー限定の投稿を見ることができます。",
   "compose_form.lock_disclaimer.lock": "承認制",
   "compose_form.placeholder": "今なにしてる？",
-  "compose_form.publish": "トゥート",
+  "compose_form.publish": "成長",
   "compose_form.publish_loud": "{publish}！",
   "compose_form.sensitive.marked": "メディアに閲覧注意が設定されています",
   "compose_form.sensitive.unmarked": "メディアに閲覧注意が設定されていません",
@@ -79,18 +79,18 @@
   "compose_form.spoiler.unmarked": "閲覧注意が設定されていません",
   "compose_form.spoiler_placeholder": "ここに警告を書いてください",
   "confirmation_modal.cancel": "キャンセル",
-  "confirmations.block.confirm": "ブロック",
-  "confirmations.block.message": "本当に{name}さんをブロックしますか？",
+  "confirmations.block.confirm": "根絶やし",
+  "confirmations.block.message": "本当に{name}さんを根絶やしにしますか？",
   "confirmations.delete.confirm": "削除",
   "confirmations.delete.message": "本当に削除しますか？",
   "confirmations.delete_list.confirm": "削除",
   "confirmations.delete_list.message": "本当にこのリストを完全に削除しますか？",
   "confirmations.domain_block.confirm": "ドメイン全体を非表示",
-  "confirmations.domain_block.message": "本当に{domain}全体を非表示にしますか？ 多くの場合は個別にブロックやミュートするだけで充分であり、また好ましいです。公開タイムラインにそのドメインのコンテンツが表示されなくなり、通知も届かなくなります。そのドメインのフォロワーはアンフォローされます。",
-  "confirmations.mute.confirm": "ミュート",
-  "confirmations.mute.message": "本当に{name}さんをミュートしますか？",
+  "confirmations.domain_block.message": "本当に{domain}全体を非表示にしますか？ 多くの場合は個別に根絶やしや除草するだけで充分であり、また好ましいです。公開タイムラインにそのドメインのコンテンツが表示されなくなり、通知も届かなくなります。そのドメインのフォロワーはアンフォローされます。",
+  "confirmations.mute.confirm": "除草",
+  "confirmations.mute.message": "本当に{name}さんを除草しますか？",
   "confirmations.redraft.confirm": "削除して下書きに戻す",
-  "confirmations.redraft.message": "本当にこのトゥートを削除して下書きに戻しますか？ このトゥートへのお気に入り登録やブーストは失われ、返信は孤立することになります。",
+  "confirmations.redraft.message": "本当にこの成長を削除して下書きに戻しますか？ この成長へのお気に入り登録や破竹の勢いは失われ、返信は孤立することになります。",
   "confirmations.reply.confirm": "返信",
   "confirmations.reply.message": "今返信すると現在作成中のメッセージが上書きされます。本当に実行しますか？",
   "confirmations.unfollow.confirm": "フォロー解除",
@@ -111,7 +111,7 @@
   "emoji_button.search_results": "検索結果",
   "emoji_button.symbols": "記号",
   "emoji_button.travel": "旅行と場所",
-  "empty_column.blocks": "まだ誰もブロックしていません。",
+  "empty_column.blocks": "まだ誰も根絶やしにしていません。",
   "empty_column.community": "ローカルタイムラインはまだ使われていません。何か書いてみましょう！",
   "empty_column.direct": "ダイレクトメッセージはまだありません。ダイレクトメッセージをやりとりすると、ここに表示されます。",
   "empty_column.domain_blocks": "非表示にしているドメインはありません。",
@@ -121,9 +121,9 @@
   "empty_column.hashtag": "このハッシュタグはまだ使われていません。",
   "empty_column.home": "まだ誰もフォローしていません。{public}を見に行くか、検索を使って他のユーザーを見つけましょう。",
   "empty_column.home.public_timeline": "連合タイムライン",
-  "empty_column.list": "このリストにはまだなにもありません。このリストのメンバーが新しいトゥートをするとここに表示されます。",
+  "empty_column.list": "このリストにはまだなにもありません。このリストのメンバーが新しい成長をするとここに表示されます。",
   "empty_column.lists": "まだリストがありません。リストを作るとここに表示されます。",
-  "empty_column.mutes": "まだ誰もミュートしていません。",
+  "empty_column.mutes": "まだ誰も除草していません。",
   "empty_column.notifications": "まだ通知がありません。他の人とふれ合って会話を始めましょう。",
   "empty_column.public": "ここにはまだ何もありません！ 公開で何かを投稿したり、他のインスタンスのユーザーをフォローしたりしていっぱいにしましょう",
   "follow_request.authorize": "許可",
@@ -137,17 +137,17 @@
   "getting_started.security": "セキュリティ",
   "getting_started.terms": "プライバシーポリシー",
   "home.column_settings.basic": "基本設定",
-  "home.column_settings.show_reblogs": "ブースト表示",
+  "home.column_settings.show_reblogs": "破竹の勢いと称された成長を表示",
   "home.column_settings.show_replies": "返信表示",
   "keyboard_shortcuts.back": "戻る",
-  "keyboard_shortcuts.blocked": "ブロックしたユーザーのリストを開く",
+  "keyboard_shortcuts.blocked": "根絶やしにしたユーザーのリストを開く",
   "keyboard_shortcuts.boost": "ブースト",
-  "keyboard_shortcuts.column": "左からn番目のカラム内最新トゥートに移動",
-  "keyboard_shortcuts.compose": "トゥート入力欄に移動",
+  "keyboard_shortcuts.column": "左からn番目のカラム内最新成長に移動",
+  "keyboard_shortcuts.compose": "成長入力欄に移動",
   "keyboard_shortcuts.description": "説明",
   "keyboard_shortcuts.direct": "ダイレクトメッセージのカラムを開く",
   "keyboard_shortcuts.down": "カラム内一つ下に移動",
-  "keyboard_shortcuts.enter": "トゥートの詳細を表示",
+  "keyboard_shortcuts.enter": "成長の詳細を表示",
   "keyboard_shortcuts.favourite": "お気に入り",
   "keyboard_shortcuts.favourites": "お気に入り登録のリストを開く",
   "keyboard_shortcuts.federated": "連合タイムラインを開く",
@@ -157,18 +157,18 @@
   "keyboard_shortcuts.legend": "この一覧を表示",
   "keyboard_shortcuts.local": "ローカルタイムラインを開く",
   "keyboard_shortcuts.mention": "メンション",
-  "keyboard_shortcuts.muted": "ミュートしたユーザーのリストを開く",
+  "keyboard_shortcuts.muted": "除草したユーザーのリストを開く",
   "keyboard_shortcuts.my_profile": "自分のプロフィールを開く",
   "keyboard_shortcuts.notifications": "通知カラムを開く",
-  "keyboard_shortcuts.pinned": "固定したトゥートのリストを開く",
+  "keyboard_shortcuts.pinned": "固定した成長のリストを開く",
   "keyboard_shortcuts.profile": "プロフィールを開く",
   "keyboard_shortcuts.reply": "返信",
   "keyboard_shortcuts.requests": "フォローリクエストのリストを開く",
   "keyboard_shortcuts.search": "検索欄に移動",
   "keyboard_shortcuts.start": "\"スタート\" カラムを開く",
   "keyboard_shortcuts.toggle_hidden": "CWで隠れた文を見る/隠す",
-  "keyboard_shortcuts.toot": "新規トゥート",
-  "keyboard_shortcuts.unfocus": "トゥート入力欄・検索欄から離れる",
+  "keyboard_shortcuts.toot": "新規成長",
+  "keyboard_shortcuts.unfocus": "成長入力欄・検索欄から離れる",
   "keyboard_shortcuts.up": "カラム内一つ上に移動",
   "lightbox.close": "閉じる",
   "lightbox.next": "次",
@@ -187,9 +187,9 @@
   "missing_indicator.sublabel": "見つかりませんでした",
   "mute_modal.hide_notifications": "このユーザーからの通知を隠しますか？",
   "navigation_bar.apps": "アプリ",
-  "navigation_bar.blocks": "ブロックしたユーザー",
+  "navigation_bar.blocks": "根絶やしにしたユーザー",
   "navigation_bar.community_timeline": "ローカルタイムライン",
-  "navigation_bar.compose": "トゥートの新規作成",
+  "navigation_bar.compose": "成長の新規作成",
   "navigation_bar.direct": "ダイレクトメッセージ",
   "navigation_bar.discover": "見つける",
   "navigation_bar.domain_blocks": "非表示にしたドメイン",
@@ -201,24 +201,24 @@
   "navigation_bar.keyboard_shortcuts": "ホットキー",
   "navigation_bar.lists": "リスト",
   "navigation_bar.logout": "ログアウト",
-  "navigation_bar.mutes": "ミュートしたユーザー",
+  "navigation_bar.mutes": "除草したユーザー",
   "navigation_bar.personal": "個人用",
-  "navigation_bar.pins": "固定したトゥート",
+  "navigation_bar.pins": "固定した成長",
   "navigation_bar.preferences": "ユーザー設定",
   "navigation_bar.public_timeline": "連合タイムライン",
   "navigation_bar.security": "セキュリティ",
-  "notification.favourite": "{name}さんがあなたのトゥートをお気に入りに登録しました",
+  "notification.favourite": "{name}さんがあなたに肥料を与えました",
   "notification.follow": "{name}さんにフォローされました",
   "notification.mention": "{name}さんがあなたに返信しました",
-  "notification.reblog": "{name}さんがあなたのトゥートをブーストしました",
+  "notification.reblog": "{name}さんがあなたの成長を破竹の勢いと称しました",
   "notifications.clear": "通知を消去",
   "notifications.clear_confirmation": "本当に通知を消去しますか？",
   "notifications.column_settings.alert": "デスクトップ通知",
-  "notifications.column_settings.favourite": "お気に入り:",
+  "notifications.column_settings.favourite": "肥料を与える:",
   "notifications.column_settings.follow": "新しいフォロワー:",
   "notifications.column_settings.mention": "返信:",
   "notifications.column_settings.push": "プッシュ通知",
-  "notifications.column_settings.reblog": "ブースト:",
+  "notifications.column_settings.reblog": "破竹の勢いと称された成長:",
   "notifications.column_settings.show": "カラムに表示",
   "notifications.column_settings.sound": "通知音を再生",
   "notifications.group": "{count} 件の通知",
@@ -268,34 +268,34 @@
   "report.target": "{target}さんを通報する",
   "search.placeholder": "検索",
   "search_popout.search_format": "高度な検索フォーマット",
-  "search_popout.tips.full_text": "表示名やユーザー名、ハッシュタグのほか、あなたのトゥートやお気に入り、ブーストしたトゥート、返信に一致する単純なテキスト。",
+  "search_popout.tips.full_text": "表示名やユーザー名、ハッシュタグのほか、あなたの成長や肥料を与えた成長、破竹の勢いと称した成長、返信に一致する単純なテキスト。",
   "search_popout.tips.hashtag": "ハッシュタグ",
-  "search_popout.tips.status": "トゥート",
+  "search_popout.tips.status": "成長",
   "search_popout.tips.text": "表示名やユーザー名、ハッシュタグに一致する単純なテキスト",
   "search_popout.tips.user": "ユーザー",
   "search_results.accounts": "人々",
   "search_results.hashtags": "ハッシュタグ",
-  "search_results.statuses": "トゥート",
+  "search_results.statuses": "成長",
   "search_results.total": "{count, number}件の結果",
   "standalone.public_title": "今こんな話をしています...",
-  "status.block": "@{name}さんをブロック",
-  "status.cancel_reblog_private": "ブースト解除",
-  "status.cannot_reblog": "この投稿はブーストできません",
+  "status.block": "@{name}さんを根絶やし",
+  "status.cancel_reblog_private": "この成長は破竹の勢いではなかった",
+  "status.cannot_reblog": "この成長は破竹の勢いと称することができません",
   "status.delete": "削除",
   "status.detailed_status": "詳細な会話ビュー",
   "status.direct": "@{name}さんにダイレクトメッセージ",
   "status.embed": "埋め込み",
-  "status.favourite": "お気に入り",
-  "status.filtered": "フィルターされました",
+  "status.favourite": "肥料を与える",
+  "status.filtered": "雑草に除草剤を散布しました",
   "status.load_more": "もっと見る",
   "status.media_hidden": "非表示のメディア",
-  "status.mention": "@{name}さんにトゥート",
+  "status.mention": "@{name}さんに成長を見せつける",
   "status.more": "もっと見る",
-  "status.mute": "@{name}さんをミュート",
-  "status.mute_conversation": "会話をミュート",
+  "status.mute": "@{name}さんを除草",
+  "status.mute_conversation": "会話を除草",
   "status.open": "詳細を表示",
   "status.pin": "プロフィールに固定表示",
-  "status.pinned": "固定されたトゥート",
+  "status.pinned": "固定された成長",
   "status.read_more": "もっと見る",
   "status.reblog": "ブースト",
   "status.reblog_private": "ブースト",
@@ -312,7 +312,7 @@
   "status.show_less_all": "全て隠す",
   "status.show_more": "もっと見る",
   "status.show_more_all": "全て見る",
-  "status.unmute_conversation": "会話のミュートを解除",
+  "status.unmute_conversation": "会話の除草を解除",
   "status.unpin": "プロフィールの固定表示を解除",
   "suggestions.dismiss": "Dismiss suggestion",
   "suggestions.header": "You might be interested in…",
@@ -321,7 +321,7 @@
   "tabs_bar.local_timeline": "ローカル",
   "tabs_bar.notifications": "通知",
   "tabs_bar.search": "検索",
-  "trends.count_by_accounts": "{count} {rawCount, plural, one {人} other {人}} がトゥート",
+  "trends.count_by_accounts": "{count} {rawCount, plural, one {人} other {人}} が成長",
   "ui.beforeunload": "Mastodonから離れると送信前の投稿は失われます。",
   "upload_area.title": "ドラッグ＆ドロップでアップロード",
   "upload_button.label": "メディアを追加 (JPEG, PNG, GIF, WebM, MP4, MOV)",
