--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -31,9 +31,9 @@ ja:
     privacy_policy: プライバシーポリシー
     source_code: ソースコード
     status_count_after:
-      one: トゥート
-      other: トゥート
-    status_count_before: トゥート数
+      one: 成長
+      other: 成長
+    status_count_before: 成長数
     terms: 利用規約
     user_count_after:
       one: 人
@@ -58,10 +58,10 @@ ja:
     pin_errors:
       following: おすすめしたい人はあなたが既にフォローしている必要があります
     posts:
-      one: トゥート
-      other: トゥート
-    posts_tab_heading: トゥート
-    posts_with_replies: トゥートと返信
+      one: 成長
+      other: 成長
+    posts_tab_heading: 成長
+    posts_with_replies: 成長と返信
     reserved_username: このユーザー名は予約されています
     roles:
       admin: Admin
@@ -156,9 +156,9 @@ ja:
         created_reports: このアカウントで作られたレポート
         report: レポート
         targeted_reports: このアカウントについてのレポート
-      silence: サイレンス
-      silenced: サイレンス済み
-      statuses: トゥート数
+      silence: 間伐
+      silenced: 間伐済み
+      statuses: 成長具合(cm)
       subscribe: 購読する
       suspended: 停止済み
       title: アカウント
@@ -174,11 +174,11 @@ ja:
         change_email_user: "%{name} さんが %{target} さんのメールアドレスを変更しました"
         confirm_user: "%{name} さんが %{target} さんのメールアドレスを確認済みにしました"
         create_custom_emoji: "%{name} さんがカスタム絵文字 %{target} を追加しました"
-        create_domain_block: "%{name} さんがドメイン %{target} をブロックしました"
+        create_domain_block: "%{name} さんがドメイン %{target} を根絶やしにしました"
         create_email_domain_block: "%{name} さんがドメイン %{target} をメールアドレス用ブラックリストに追加しました"
         demote_user: "%{name} さんが %{target} さんを降格しました"
         destroy_custom_emoji: "%{name} さんがカスタム絵文字 %{target} を削除しました"
-        destroy_domain_block: "%{name} さんがドメイン %{target} のブロックを外しました"
+        destroy_domain_block: "%{name} さんがドメイン %{target} の根絶やしを解除しました"
         destroy_email_domain_block: "%{name} さんがドメイン %{target} をメールアドレス用ブラックリストから外しました"
         destroy_status: "%{name} さんが %{target} さんの投稿を削除しました"
         disable_2fa_user: "%{name} さんが %{target} さんの二段階認証を無効化しました"
@@ -256,7 +256,7 @@ ja:
         create: ブロックを作成
         hint: ドメインブロックはデータベース中のアカウント項目の作成を妨げませんが、遡って自動的に指定されたモデレーションをそれらのアカウントに適用します。
         severity:
-          desc_html: "<strong>サイレンス</strong>はアカウントのトゥートをフォローしていない人から隠します。<strong>停止</strong>はそのアカウントのコンテンツ、メディア、プロフィールデータをすべて削除します。メディアファイルの拒否は<strong>なし</strong>を使います。"
+          desc_html: "<strong>サイレンス</strong>はアカウントの成長をフォローしていない人から隠します。<strong>停止</strong>はそのアカウントのコンテンツ、メディア、プロフィールデータをすべて削除します。メディアファイルの拒否は<strong>なし</strong>を使います。"
           noop: なし
           silence: サイレンス
           suspend: 停止
@@ -308,11 +308,11 @@ ja:
     relays:
       add_new: リレーを追加
       delete: 削除
-      description_html: "<strong>連合リレー</strong>とは、登録しているサーバー間の公開トゥートを仲介するサーバーです。<strong>中小規模のサーバーが連合のコンテンツを見つけるのを助けます。</strong>これを使用しない場合、ローカルユーザーがリモートユーザーを手動でフォローする必要があります。"
+      description_html: "<strong>連合リレー</strong>とは、登録しているサーバー間の公開成長を仲介するサーバーです。<strong>中小規模のサーバーが連合のコンテンツを見つけるのを助けます。</strong>これを使用しない場合、ローカルユーザーがリモートユーザーを手動でフォローする必要があります。"
       disable: 無効化
       disabled: 無効
       enable: 有効化
-      enable_hint: 有効にすると、リレーから全ての公開トゥートを受信するようになり、またこのサーバーの全ての公開トゥートをリレーに送信するようになります。
+      enable_hint: 有効にすると、リレーから全ての公開成長を受信するようになり、またこのサーバーの全ての公開成長をリレーに送信するようになります。
       enabled: 有効
       inbox_url: リレーURL
       pending: リレーサーバーの承認待ちです
@@ -355,7 +355,7 @@ ja:
       updated_at: 更新日時
     settings:
       activity_api_enabled:
-        desc_html: 週ごとのローカルに投稿されたトゥート数、アクティブなユーザー数、新規登録者数
+        desc_html: 週ごとのローカルに投稿された成長数、アクティブなユーザー数、新規登録者数
         title: ユーザーアクティビティに関する統計を公開する
       bootstrap_timeline_accounts:
         desc_html: 複数のユーザー名はコンマで区切ります。ローカルの公開アカウントのみ有効です。指定しない場合は管理者がデフォルトで指定されます。
@@ -392,7 +392,7 @@ ja:
           desc_html: 誰でも自由にアカウントを作成できるようにします
           title: 新規登録を受け付ける
       show_known_fediverse_at_about_page:
-        desc_html: チェックを入れるとプレビュー欄に既知の連合先全てのトゥートを表示します。外すとローカルのトゥートだけ表示します。
+        desc_html: チェックを入れるとプレビュー欄に既知の連合先全ての成長を表示します。外すとローカルの成長だけ表示します。
         title: タイムラインプレビューに連合タイムラインを表示する
       show_staff_badge:
         desc_html: ユーザーページにスタッフのバッジを表示します
@@ -428,7 +428,7 @@ ja:
         title: メディア
       no_media: メディアなし
       no_status_selected: 何も選択されていないため、変更されていません
-      title: トゥート一覧
+      title: 成長一覧
       with_media: メディアあり
     subscriptions:
       callback_url: コールバックURL
@@ -455,7 +455,7 @@ ja:
     settings: 'メール設定の変更: %{link}'
     view: 'リンク:'
     view_profile: プロフィールを表示
-    view_status: トゥートを表示
+    view_status: 成長を表示
   applications:
     created: アプリが作成されました
     destroyed: アプリが削除されました
@@ -537,14 +537,14 @@ ja:
     archive_takeout:
       date: 日時
       download: ダウンロード
-      hint_html: "<strong>トゥートとメディア</strong>のアーカイブをリクエストできます。 データはActivityPub形式で、対応しているソフトウェアで読み込むことができます。7日毎にアーカイブをリクエストできます。"
+      hint_html: "<strong>成長とメディア</strong>のアーカイブをリクエストできます。 データはActivityPub形式で、対応しているソフトウェアで読み込むことができます。7日毎にアーカイブをリクエストできます。"
       in_progress: 準備中...
       request: アーカイブをリクエスト
       size: 容量
-    blocks: ブロック
+    blocks: 根絶やし
     csv: CSV
     follows: フォロー
-    mutes: ミュート
+    mutes: 除草
     storage: メディア
   filters:
     contexts:
@@ -589,9 +589,9 @@ ja:
     preface: 他のインスタンスでエクスポートされたファイルから、フォロー/ブロックした情報をこのインスタンス上のアカウントにインポートできます。
     success: ファイルは正常にアップロードされ、現在処理中です。しばらくしてから確認してください
     types:
-      blocking: ブロックしたアカウントリスト
+      blocking: 根絶やしにしたアカウントリスト
       following: フォロー中のアカウントリスト
-      muting: ミュートしたアカウントリスト
+      muting: 除草したアカウントリスト
     upload: アップロード
   in_memoriam_html: 故人を偲んで。
   invites:
@@ -643,9 +643,9 @@ ja:
         other: "新しい%{count}件の通知 \U0001F418"
       title: 不在の間に…
     favourite:
-      body: "%{name} さんにお気に入り登録された、あなたのトゥートがあります:"
-      subject: "%{name} さんにお気に入りに登録されました"
-      title: 新たなお気に入り登録
+      body: "%{name} さんに肥料を与えられた、あなたの成長があります:"
+      subject: "%{name} さんに肥料を与えられました"
+      title: 新たな肥料を与えられた成長
     follow:
       body: "%{name} さんにフォローされています！"
       subject: "%{name} さんにフォローされています"
@@ -661,9 +661,9 @@ ja:
       subject: "%{name} さんに返信されました"
       title: 新たな返信
     reblog:
-      body: "%{name} さんにブーストされた、あなたのトゥートがあります:"
-      subject: "%{name} さんにブーストされました"
-      title: 新たなブースト
+      body: "%{name} さんに破竹の勢いと称された、あなたの成長があります:"
+      subject: "%{name} さんに破竹の勢いと称されました"
+      title: 新たな破竹の勢いと称された成長
   number:
     human:
       decimal_units:
@@ -675,9 +675,9 @@ ja:
           thousand: K
           trillion: T
   pagination:
-    newer: 新しいトゥート
+    newer: 新しい成長
     next: 次
-    older: 以前のトゥート
+    older: 以前の成長
     prev: 前
     truncate: "&hellip;"
   preferences:
@@ -693,7 +693,7 @@ ja:
     prompt: 'フォローしようとしています:'
   remote_interaction:
     proceed: 進む
-    prompt: 'このトゥートに返信しようとしています:'
+    prompt: 'この成長に返信しようとしています:'
   remote_unfollow:
     error: エラー
     title: タイトル
@@ -772,10 +772,10 @@ ja:
     open_in_web: Webで開く
     over_character_limit: 上限は %{max}文字までです
     pin_errors:
-      limit: 固定されているトゥートの上限に達しました
-      ownership: 他人のトゥートを固定することはできません
-      private: 非公開のトゥートを固定することはできません
-      reblog: ブーストされたトゥートを固定することはできません
+      limit: 固定されている成長の上限に達しました
+      ownership: 他人の成長を固定することはできません
+      private: 非公開の成長を固定することはできません
+      reblog: ブーストされた成長を固定することはできません
     show_more: もっと見る
     sign_in_to_participate: ログインして会話に参加
     title: '%{name}: "%{quote}"'
@@ -787,7 +787,7 @@ ja:
       unlisted: 未収載
       unlisted_long: 誰でも見ることができますが、公開タイムラインには表示されません
   stream_entries:
-    pinned: 固定されたトゥート
+    pinned: 固定された成長
     reblogged: さんがブースト
     sensitive_content: 閲覧注意
   terms:
