Customized for Taketodon

--- a/config/locales/simple_form.ja.yml
+++ b/config/locales/simple_form.ja.yml
@@ -87,7 +87,7 @@ ja:
         follow: フォローされた時にメールで通知する
         follow_request: フォローリクエストを受けた時にメールで通知する
         mention: 返信が来た時にメールで通知する
-        reblog: トゥートがブーストされた時にメールで通知する
+        reblog: 成長がブーストされた時にメールで通知する
     'no': いいえ
     required:
       mark: "*"
